# SPDX-FileCopyrightText: Copyright 2022 EDF (Électricité de France S.A.)
# SPDX-License-Identifier: BSD-3-Clause
# See README for all details on copyright, authorship and license.

[package]
name = "coap-gatt-utils"
version = "0.1.0"
edition = "2021"
authors = [ "EDF, developed in collaboration with Christian Amsüss" ]
license = "BSD-3-Clause"

[dependencies]
coap-message = "0.2.3"
coap-message-utils = "0.2.2"
heapless = "0.7.16"
